# OOF3D

./: .gitignore  DIR.py  README  README.md  checkSignatures.py  distname.py  fixheaders  getgit.py  installation_log  localexclusions.py  make_dist  oof2  oof2-build  oof2-clean  oof2extutils.py  oof2installlib.py  oof2setuputils.py  oof3d  oof3dtest  pypath.py  setup.py  summary.txt  todo.txt
3DSandbox/: GtkGLExtVTKRenderWindow.py  Makefile  Notes  README  canvas3d.py  cellrefannoyance.py  clipImage.C  clipImage2.C  clipImage3.C  clipImage3a.C  clipImage3b.C  clipMesh.C  cliptet.C  coloredtets.C  consolidateboundaries.py  consolidateboundaries2.py  demo3d.py  findboundaries.py  findedgeidmap.py  gtkvtkdebug.py  gtkvtkdebug2.py  hextest2.py  homogeneitytest.py  imagecolortest.py  imagepadtest.py  imagepluspoly.py  independentcomponenttest.py  loadimage.py  marchingcubestest.py  materialdisplaytest.py  oofExcludeVoxels.C  oofExcludeVoxels.h  oofImageToGrid.C  oofImageToGrid.h  oofOverlayVoxels.C  oofOverlayVoxels.h  polyintersect.py  rectimage.C  renderTranslucent.C  replaceLUT.C  (+6 more)
NOTES/: 3dinquiries.txt  CYGWIN_INSTALL  NOTES.refinement  NOTES.timestepping  NOTES_2.1.txt  NOTES_GUI  NOTES_IO  NOTES_OOF  NOTES_SCRIPT  OOF_CYGWIN_LIBRARIES  OPTIMIZATION  TODO  TODO3D  canvasbug.txt  distorted_sf_derivs.txt  evolution.txt  interfaces.txt  kessel.txt  linear_system.txt  oofports.txt  output.txt  parallel_ideas.py  plasticity_timestepping.txt  plasticity_timestepping_dbg.txt  progressbar.txt  property_renovation.txt  selection_changes_3.2.txt  selection_machinery.txt  sf_derivs.txt  shutdown_sequence.txt  skeletongroups.txt  skeletonselection.txt  solver_sequence.txt  solver_sequence_devel.txt  solver_sequence_td.txt  sparsesolve.C  subproblem_design.txt  surface_tension.tex  threading.txt  timestepping.tex  (+9 more)
OOFSWIG/: CHANGES  INSTALL  Makefile.in  Makefile.template.in  Makefile.win.bc  Makefile.win.vc  NEW  TROUBLESHOOTING  configure  configure.in  files
OOFSWIG/Doc/: Porting  README  c++-dynamic  swiglib.doc
OOFSWIG/Include/: swig.h
OOFSWIG/Modules/: Makefile.in  debug.cxx  debug.h  makefile.bc  makefile.msc  pycpp.cxx  python.cxx  python.h  swigmain.cxx  wrap.h
OOFSWIG/Runtime/: Makefile.in  makefile.msc
OOFSWIG/SWIG/: Makefile.in  ascii.cxx  ascii.h  comment.cxx  cplus.cxx  emit.cxx  getopt.cxx  hash.cxx  html.cxx  html.h  include.cxx  internal.h  lang.cxx  latex.cxx  latex.h  main.cxx  makefile.bc  makefile.msc  naming.cxx  newdoc.cxx  nodoc.h  parms.cxx  parser.h  parser.y  scanner.cxx  sstring.cxx  symbol.cxx  typemap.cxx  types.cxx  wrapfunc.cxx  y.tab.c
OOFSWIG/Tests/: Makefile  README
OOFSWIG/Tests/Doc/: Makefile  after.i  after_regr.doc  after_regr.html  after_regr.tex  before.i  before_in.i  before_regr.doc  before_regr.html  before_regr.tex  chop.i  chop_regr.doc  chop_regr.html  chop_regr.tex  define.i  doc.i  enable.i  enable_regr.doc  enable_regr.html  enable_regr.tex  end.i  end_regr.doc  end_regr.html  end_regr.tex  formathtml.i  ignore.i  ignore_regr.doc  ignore_regr.html  ignore_regr.tex  make.sh  mixed.i  multiline.i  multiline_regr.doc  multiline_regr.html  multiline_regr.tex  single.i  single_regr.doc  single_regr.html  single_regr.tex  skip.i  (+14 more)
OOFSWIG/Tests/Errors/: Makefile  errors.i  friend.i  header_error.i  macro.i  make.sh  misplaced_cond.i  missing_endif.i  missing_header.i  missing_struct.i  operator.i  unclosed_hblock.i  unterm_comment.i  unterm_string.i  vararg.i
OOFSWIG/Tests/Parser/: Makefile  addmethods.i  addmethods_regr.c  amextern.i  array.i  array.output.msg  array_regr.c  carray.i  code.i  code_regr.c  conditional.i  conditional_regr.c  constant.i  constant_regr.c  cpp_const.i  cpp_const_regr.c  cpp_data.i  cpp_data_regr.c  cpp_func.i  cpp_func_regr.c  cpp_ignore.i  cpp_inherit.i  cpp_inherit_regr.c  cpp_misc.i  cpp_misc_regr.c  defarg.i  defarg_regr.c  doc.i  doc_regr.c  enum_cond.i  enum_cond_regr.c  except.i  except_regr.c  extern.i  extern_regr.c  function.i  function_regr.c  gl.i  glaux.i  glu.i  (+74 more)
OOFSWIG/Win/: README.txt  make_bc.in  make_win.in  makefile.bc  makefile.vc
OOFSWIG/swig_lib/: math.i  stdlib.i  swigptr.swg  timers.i
OOFSWIG/swig_lib/python/: Makefile.in
SRC/: DIR.py  TODO  changelog.txt  changelog3.txt  commentline  exceptions.txt  header  header.py  maketags  pyexp.swg  switchboard.txt
TEST/: NOTES  README  activearea_test.py  aniso_test.py  boundary_condition_test.py  file_compare.py  fundamental_test.py  image_test.py  interface_test.py  material_property_test.py  matrix_test.py  memorycheck.py  mesh_modify_test.py  mesh_test.py  microstructure_extra_test.py  microstructure_test.py  output_test.py  pixel_extra_test.py  pixel_test.py  r3tensorrotationbug.py  regression.py  skeleton_basic_test.py  skeleton_bdy_test.py  skeleton_extra_test.py  skeleton_generate.py  skeleton_periodic_bdy_test.py  skeleton_periodic_test.py  skeleton_select_test.py  skeleton_selectionmod_test.py  solver_test.py  subproblem_test.py  subproblem_test_extra.py
TEST3D/: 3faces.py  3nodes.py  3segments.py  README  activearea_test.py  aniso_test.py  autorationalizebug9.skel  bad.skel  bad2.skel  bdyloop-1.py  bdyloop-2.py  bdytestsetup.py  boundary_condition_test.py  click  comparesorted  copybcinit.mesh  corners  diffusion.mesh  e_indices.py  edgebdybug.py  edgebdybug2.py  edgeloop.py  element187.txt  element259.txt  empty.ms  epts  everythingbagel.mesh  everythingbagel.skel  exact_solns.py  f_indices.py  faceselect.py  facetdump  facetdump-21-failed  facetdump-21-failed-2  facetdump-29-failed  facetdump-29-failed-2  finalfacets_cat0_face0  finalfacets_cat0_face1  finalfacets_cat0_face2  finalfacets_cat0_face3  (+140 more)
examples/: cyallow.mesh  el_shape.mesh  green_corner.skeleton  triangle.skeleton  two_circles.skeleton
math/: bounds.math  bounds_3node.math  bounds_6node.math  bounds_8node.math  eightnode3x3.mtx  fournode1x1.mtx  matrix_check.math  matrix_check4.math  matrix_check4_therm.math  matrix_check_therm.math  plane_stress.math  superquad.math  supertri.math  threenode1x1.mtx  threenode3x3.mtx
shlib/: build_shlib.py  (+2 more)
(+3465 files in other folders)
